--- a/index.html
+++ b/index.html
@@ -216,6 +216,7 @@
             <a href="games/Temple-run/"><img src="images/temple-run.jpeg" alt="Temple run"></a>
             <a href="games/osu/"><img src="images/osu.jpg" alt="osu!"></a>
             <a href="games/geosash/"><img src="images/geo.png" alt="geometry dash">
+            <a href="games/cookie-clicker/"><img src="images/geo.png" alt="cookie clicker">
         </div>
     </div>
 
