--- a/index.html
+++ b/index.html
@@ -221,5 +221,8 @@
     </div>
 
     <script src="script.js"></script>
+    <footer>
+        <p>&copy; 2023 Your Name</p>
+    </footer>
 </body>
 </html>
