--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@ html, body {
     margin: 0; /* Remove default margin */
     display: flex;
     flex-direction: column;
+    font-size: 36px;
 }
 
 .content {
