--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ footer {
         </div>
                 
         <footer>
-        <p>&copy; 2023 Fusion.LCC.All Rights Reserved.</p>
+        <p>&copy; 2023 Fusion.LCC All Rights Reserved.</p>
         </footer>
     </div>
 
