--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ footer {
         .game-title {
             margin: 0;
             font-size: 76px; /* Increase the font size for the Game Title */
-            background: linear-gradient(to right, #8b51fe 52.5%, #ffffff 50%); /* Gradient from purple to white */
+            background: linear-gradient(to right, #8b51fe 50%, #ffffff 50%); /* Gradient from purple to white */
             -webkit-background-clip: text; /* Clip text to gradient */
             color: transparent; /* Hide the text color */
         }
@@ -204,7 +204,7 @@ footer {
 
         <!-- Center the "FUSION" text with two different colors -->
         <div class="fusion-text-container">
-            <div class="fusion-text">FUSION</div>
+            <div class="fusion-text">FS</div>
         </div>
 
         <!-- Move the randomized subtitles below the "Fusion is awesome!" text -->
