--- a/games/sneakpeek/index.html
+++ b/games/sneakpeek/index.html
@@ -8,5 +8,7 @@
 <body>
     <img src="image1.jpg" alt="Image 1">
     <img src="image2.jpg" alt="Image 2">
+    <img src="image2.jpg" alt="Image 3">
+    <img src="image2.jpg" alt="Image 4">
 </body>
 </html>
