--- a/games/sneakpeek/index.html
+++ b/games/sneakpeek/index.html
@@ -6,9 +6,9 @@
     <title>Your Image Gallery</title>
 </head>
 <body>
-    <img src="image1.jpg" alt="Image 1">
-    <img src="image2.jpg" alt="Image 2">
-    <img src="image2.jpg" alt="Image 3">
-    <img src="image2.jpg" alt="Image 4">
+    <img src="Screenshot 2023-10-08 204914.png" alt="Image 1">
+    <img src="Screenshot 2023-10-08 204935.png" alt="Image 2">
+    <img src="Screenshot 2023-10-08 204951.png" alt="Image 3">
+    <img src="Screenshot 2023-10-08 205005.png" alt="Image 4">
 </body>
 </html>
