--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@ footer {
         </div>
 
         <div id="games">
-            <a href="games/sneakpeek/"><img src="images/bob-the-robber-2.png" alt="sneekpeek"></a>
+            <a href="games/sneakpeek/"><img src="images/Sneak-Peek.jpg" alt="sneekpeek"></a>
             <a href="games/bob-the-robber-2/"><img src="images/bob-the-robber-2.png" alt="bob the robber 2"></a>
             <a href="games/vex3/"><img src="images/vex3.jpg" alt="vex 3"></a>
             <a href="games/vex4/"><img src="images/vex4.jpg" alt="vex 4"></a>
