--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ footer {
     
     <script>
         // Array of possible subtitles
-        const subtitles = ["v3.0 Coming soon.."];
+        const subtitles = ["Tomorrow..."];
 
         // Function to pick a random subtitle
         function getRandomSubtitle() {
