--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ footer {
     
     <script>
         // Array of possible subtitles
-        const subtitles = ["Tomorrow..."];
+        const subtitles = ["V3.0 Hurts my brain"];
 
         // Function to pick a random subtitle
         function getRandomSubtitle() {
