--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ footer {
         /* Style for the "FUSION" text with gradient, font-family, and bold */
         .fusion-text {
             font-size: 190px;
-            background: linear-gradient(to right, #8b51fe 52.5%, #ffffff 50%); /* Gradient from purple to white */
+            background: linear-gradient(to right, #8b51fe 50%, #ffffff 50%); /* Gradient from purple to white */
             -webkit-background-clip: text; /* Clip text to gradient */
             color: transparent; /* Hide the text color */
             font-weight: bold; /* Make the text bold */
@@ -191,7 +191,7 @@ footer {
 <body>
     <nav>
         <div class="title-and-search">
-            <h1 class="game-title">FUSION</h1>
+            <h1 class="game-title">TERREN</h1>
             <div class="search">
                 <input type="text" placeholder="Search..." oninput="">
                 <button><i class="fas fa-search"></i></button>
@@ -204,7 +204,7 @@ footer {
 
         <!-- Center the "FUSION" text with two different colors -->
         <div class="fusion-text-container">
-            <div class="fusion-text">FUSION</div>
+            <div class="fusion-text">TERREN</div>
         </div>
 
         <!-- Move the randomized subtitles below the "Fusion is awesome!" text -->
