--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ footer {
     
     <script>
         // Array of possible subtitles
-        const subtitles = ["V3.0 Hurts my brain"];
+        const subtitles = ["no"];
 
         // Function to pick a random subtitle
         function getRandomSubtitle() {
@@ -191,7 +191,7 @@ footer {
 <body>
     <nav>
         <div class="title-and-search">
-            <h1 class="game-title">TERREN</h1>
+            <h1 class="game-title">FUSION</h1>
             <div class="search">
                 <input type="text" placeholder="Search..." oninput="">
                 <button><i class="fas fa-search"></i></button>
@@ -204,7 +204,7 @@ footer {
 
         <!-- Center the "FUSION" text with two different colors -->
         <div class="fusion-text-container">
-            <div class="fusion-text">TERREN</div>
+            <div class="fusion-text">FUSION</div>
         </div>
 
         <!-- Move the randomized subtitles below the "Fusion is awesome!" text -->
