--- a/index.html
+++ b/index.html
@@ -1,40 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
+<!-- Mirrored from idkbutdisisatest.neocities.org/ by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 21 Oct 2023 17:09:22 GMT -->
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Best Unbl0cked Gxmes site on the block!" />
     <title>FUSION</title>
-    <link rel="icon" href="images/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="../site-assets.fontawesome.com/releases/v6.2.0/css/all.css">
-    <script>
-        // Your JavaScript code here
-        document.getElementById("start-button").addEventListener("click", function () {
-            window.scrollBy(0, 470);
-        });
-
-        function search() {
-            var searchInput = document.getElementById("search").value;
-            // Add your search logic here
-        }
-
-        window.addEventListener('DOMContentLoaded', function () {
-            const randomSubtitleElement = document.getElementById("subtitle");
-            randomSubtitleElement.textContent = getRandomSubtitle();
-        });
-
-        function getRandomSubtitle() {
-            const subtitles = ["Subtitle 1", "Subtitle 2", "Subtitle 3"];
-            const randomIndex = Math.floor(Math.random() * subtitles.length);
-            return subtitles[randomIndex];
-        }
-
-        function play() {
-            var iframe = document.getElementById("iframe");
-            iframe.src = "game-url.html";
-        }
-    </script>
+    <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
 </head>
 <body>
     <div id="navigation">
@@ -67,7 +43,24 @@
             <p id="display"></p>
         </main>
     </footer>
+     <!-- <div id="featured">
+        <div class="item" style="background: url('./images/banners/vex7-banner.jpg') 0% 0% / cover;">
+            <div class="content">
+                <h1>Vex 7</h1>
+                <p>Play Vex 7 Now!</p>
+                <button onclick="play('vex7')">Play</button>
+            </div>
+        </div>
+        <div class="item" style="background: url('./images/banners/moto-x3m-banner.jpg') 0% 0% / cover;">
+            <div class="content">
+                <h1>Moto X3M</h1>
+                <p>Play Moto X3M Now!</p>
+                <button onclick="play('moto-x3m')">Play</button>
+            </div>
+    </div> -->
     <script src="script.js"></script>
     <script src="subtitle.js"></script>
-</body>
+  </body>
+
+<!-- Mirrored from idkbutdisisatest.neocities.org/ by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 21 Oct 2023 17:09:23 GMT -->
 </html>
