--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <p id="display"></p>
         </main>
     </footer>
-     <!-- <div id="featured">
+     <div id="featured">
         <div class="item" style="background: url('./images/banners/vex7-banner.jpg') 0% 0% / cover;">
             <div class="content">
                 <h1>Vex 7</h1>
@@ -57,7 +57,7 @@
                 <p>Play Moto X3M Now!</p>
                 <button onclick="play('moto-x3m')">Play</button>
             </div>
-    </div> -->
+    </div>
     <script src="script.js"></script>
     <script src="subtitle.js"></script>
   </body>
