--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="main" id="main">
         <h1>FUS<span>ION</span></h1>
         <p><span id="subtitle">Loading...</span></p>
-        <button id="start-button">Get Started</button>
+        <button id="start-button">PLAY!</button>
     </div>
     <div id="game-frame">
         <div class="controls">
