--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="main" id="main">
         <h1>FUS<span>ION</span></h1>
         <p><span id="subtitle">Loading...</span></p>
-        <button id="start-button">PLAY!</button>
+        <button id="start-button">Get Started</button>
     </div>
     <div id="game-frame">
         <div class="controls">
@@ -31,7 +31,9 @@
         <iframe src="#" id="iframe"></iframe>
     </div>
     <div id="error">No Games Found.</div>
-    <div id="games"></div>
+    <div id="games">
+        <!-- Game elements will be dynamically generated here -->
+    </div>
     <footer id="footer">
         <main>
             <hr>
@@ -41,8 +43,8 @@
             <p id="display"></p>
         </main>
     </footer>
-    </div>
+    <script src="game-links.js"></script> <!-- Reference the game-links.js file -->
     <script src="script.js"></script>
     <script src="subtitle.js"></script>
-  </body>
+</body>
 </html>
