--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
             <div class="cover"></div>
         </div>
         <div id="game-content" class="game-content">
-            <h1>Another Game</h1>
-            <p>Description of Another Game.</p>
+            <h1>1v1.lol</h1>
+            <p>description.</p>
             <button class="install" onclick="play('1v1.lol', './games/1v1lol')">Play</button>
         </div>
     </div>
