--- a/index.html
+++ b/index.html
@@ -57,7 +57,36 @@
         <iframe src="#" id="iframe"></iframe>
     </div>
     <div id="error">No Games Found.</div>
-    <div id="games"></div>
+    <div id="games">
+    <a href="games/sneakpeek/index.html">Sneak Peek</a>
+    <a href="games/bob-the-robber-2/index.html">Bob the Robber 2</a>
+    <a href="games/vex3/index.html">Vex 3</a>
+    <a href="games/vex4/index.html">Vex 4</a>
+    <a href="games/vex5/index.html">Vex 5</a>
+    <a href="games/vex6/index.html">Vex 6</a>
+    <a href="games/vex7/index.html">Vex 7</a>
+    <a href="games/Minecraft/index.html">Minecraft</a>
+    <a href="games/moto-x3m/index.html">Moto X3M</a>
+    <a href="games/retro-bowl/index.html">Retro Bowl</a>
+    <a href="games/drive-mad/index.html">Drive Mad</a>
+    <a href="games/slope/index.html">Slope</a>
+    <a href="games/motox3m2/index.html">Moto X3M 2</a>
+    <a href="games/Basketball-Stars/index.html">Basketball Stars</a>
+    <a href="games/2048/index.html">2048</a>
+    <a href="games/1v1lol/index.html">1v1.lol</a>
+    <a href="games/Monkey-Mart/index.html">Monkey Mart</a>
+    <a href="games/Bitlife/index.html">Bitlife</a>
+    <a href="games/Angry-Sharks/index.html">Angry Sharks</a>
+    <a href="games/Sm64/index.html">Super Mario 64</a>
+    <a href="games/Jetpack-joyride/index.html">Jetpack Joyride</a>
+    <a href="games/Just-fall/index.html">Just Fall</a>
+    <a href="games/Tunnel-rush/index.html">Tunnel Rush</a>
+    <a href="games/Mario/index.html">Mario</a>
+    <a href="games/Temple-run/index.html">Temple Run</a>
+    <a href="games/osu/index.html">osu!</a>
+    <a href="games/geosash/index.html">Geometry Dash</a>
+    <a href="games/cookie-clicker/index.html">Cookie Clicker</a>
+</div>
     <footer id="footer">
         <main>
             <hr>
