--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ footer {
             border-radius: 15px; /* Make the button round */
             cursor: pointer; /* Add pointer cursor on hover */
             transition: background-color 0.3s ease, color 0.3s ease; 
-            font-family: Arial, sans-serif;
+            font-family: 'Montserrat', sans-serif;
             font-weight: bold
         }
 
@@ -142,7 +142,7 @@ footer {
         #getStartedButton:hover {
             background-color: white; /* White background color */
             color: #8b51fe; /* Purple text color */
-            font-family: Arial, sans-serif;
+            font-family: 'Montserrat', sans-serif;
             font-weight: bold
         }
 
