--- a/index.html
+++ b/index.html
@@ -10,14 +10,6 @@
     <link rel="stylesheet" href="/main.css">
     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.2.0/css/all.css">
     <style>
-
-      footer {
-    text-align: center; /* Center the text horizontally */
-    padding: 20px; /* Add padding for spacing */
-    background-color: #333; /* Background color for the footer */
-    color: white; /* Text color for the footer */
-}
-
 /* If you want to center the footer vertically in the viewport, you can use flexbox */
 html, body {
     height: 100%; /* Make sure the body and HTML have full height */
@@ -245,9 +237,15 @@ footer {
             <a href="games/cookie-clicker/"><img src="images/cookie-clicker.jpg" alt="cookie clicker"></a>
         </div>
                 
-        <footer>
-        <p>&copy; 2023 Fusion.LCC All Rights Reserved.</p>
-        </footer>
+       <footer id="footer">
+          <main>
+        <hr>
+        <h1>FUS<span>ION</span></h1>
+        <h2><a href=""><span class="one">MADE BY CHELINOMX</span></a>/h2>
+        <p>© FUSION. All rights reserved.</p>
+        <p id="display"></p>
+    </main>
+</footer>
     </div>
 
     <script src="script.js"></script>
