--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@ footer {
           <main>
         <hr>
         <h1>FUS<span>ION</span></h1>
-        <h2><a href=""><span class="one">MADE BY CHELINOMX</span></a>/h2>
+        <h2><a href=""><span class="one">MADE BY CHELINOMX</span></a><h2>
         <p>© FUSION. All rights reserved.</p>
         <p id="display"></p>
     </main>
