--- a/index.html
+++ b/index.html
@@ -208,7 +208,9 @@ footer {
         </div>
 
         <div id="games">
-            <a href="games/bob-the-robber-2/"><img src="images/bob-the-robber-2.png" alt="bob the robber 2"></a>
+         <div class="game-item" data-name="Bob the Robber 2">
+            <a href="games/bob-the-robber-2/"><img src="images/bob-the-robber-2.png" alt="Bob the Robber 2"></a>
+        </div>
             <a href="games/vex3/"><img src="images/vex3.jpg" alt="vex 3"></a>
             <a href="games/vex4/"><img src="images/vex4.jpg" alt="vex 4"></a>
             <a href="games/vex5/"><img src="images/vex5.jpg" alt="vex 5"></a>
