--- a/index.html
+++ b/index.html
@@ -214,6 +214,7 @@ footer {
             <div class="game-name">Bob the Robber 2</div>
         </a>
     </div>
+            <a href="games/bob-the-robber-2/"><img src="images/bob-the-robber-2.png" alt="bob the robber 2"></a>
             <a href="games/vex3/"><img src="images/vex3.jpg" alt="vex 3"></a>
             <a href="games/vex4/"><img src="images/vex4.jpg" alt="vex 4"></a>
             <a href="games/vex5/"><img src="images/vex5.jpg" alt="vex 5"></a>
