--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ footer {
     
     <script>
         // Array of possible subtitles
-        const subtitles = ["no"];
+        const subtitles = ["WHO GAVE YOU THIS?"];
 
         // Function to pick a random subtitle
         function getRandomSubtitle() {
